--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Sábado, 5 de Junho de 2021 - Guarulhos, São Paulo
         <div class="banner-full">
             <div class="container">
                 <div class="row d-flex align-items-center">
-                    <div class="col-lg-6">
+                    <div class="col-lg-4">
                         <h2>Bem-vindo ao site da Empresa</h2>
                         <h3>Ofercemos Soluções Tecnológicas
                             <br>
@@ -80,7 +80,7 @@ Sábado, 5 de Junho de 2021 - Guarulhos, São Paulo
                             <a href="#">SAIBA MAIS! <i class="fas fa-long-arrow-alt-right"></i></a>
                         </div>
                     </div>
-                    <div class="col-lg-6 img-svg">
+                    <div class="col-lg-8 img-svg">
                         <svg id="b2c7d13c-cf19-4853-8e1a-27f628056126" data-name="Layer 1"
                             xmlns="http://www.w3.org/2000/svg" width="841.59024" height="589"
                             viewBox="0 0 841.59024 589">
@@ -228,22 +228,43 @@ Sábado, 5 de Junho de 2021 - Guarulhos, São Paulo
             </div>
         </div>
     </main>
-
+    <!-- Rodapé -->
     <footer>
         <div class="container">
-            <div class="row">
+            <div class="row b-line">
                 <div class="col-md-5">
-                    <a href="index.html" class="logo me-auto me-lg-0">
+                    <a href="index.html" class="logo">
                         <img src="/template/imagens/logo.png" alt="Logo da Empresa">
                     </a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptates veniam velit quas?
                         Maxime incidunt, cupiditate amet</p>
+                    <div class="redes-socias-footer">
+                        <a href="https://www.instagram.com/diguinho_jn/" target="_blank" title="Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="" target="_blank" title="WhatsApp">
+                            <i class="fab fa-whatsapp"></i>
+                        </a>
+                        <a href="https://github.com/RodrigoJrDev" target="_blank" title="GitHub">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </div>
                 </div>
                 <div class="col-md-2">
-
+                    <h4>Instucional</h4>
+                    <ul>
+                        <li>Empresa</li>
+                        <li>Serviços</li>
+                        <li>Contato</li>
+                    </ul>
                 </div>
                 <div class="col-md-2">
-
+                    <h4>Serviços</h4>
+                    <ul>
+                        <li>Responsivo</li>
+                        <li>Qualidade</li>
+                        <li>Segurança</li>
+                    </ul>
                 </div>
                 <div class="col-md-3">
                     <h4>Entre em Contato!</h4>
