--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@ Sábado, 5 de Junho de 2021 - Guarulhos, São Paulo
     <title>Home - Site da Empresa</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/template/imagens/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./template/imagens/favicon.ico" type="image/x-icon">
 
     <!-- Links CSS - Frameworks -->
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/fontawesome/css/all.css">
+    <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/fontawesome/css/all.css">
 
     <!-- Links CSS -->
-    <link rel="stylesheet" href="/template/css/fonts.css">
-    <link rel="stylesheet" href="/template/css/style.css">
-    <link rel="stylesheet" href="/template/css/responsivo.css">
+    <link rel="stylesheet" href="./template/css/fonts.css">
+    <link rel="stylesheet" href="./template/css/style.css">
+    <link rel="stylesheet" href="./template/css/responsivo.css">
 </head>
 
 <body>
