--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Sábado, 5 de Junho de 2021 - Guarulhos, São Paulo
         <div class="banner-full">
             <div class="container">
                 <div class="row d-flex align-items-center">
-                    <div class="col-lg-4">
+                    <div class="col-lg-6">
                         <h2>Bem-vindo ao site da Empresa</h2>
                         <h3>Ofercemos Soluções Tecnológicas
                             <br>
@@ -80,7 +80,7 @@ Sábado, 5 de Junho de 2021 - Guarulhos, São Paulo
                             <a href="#">SAIBA MAIS! <i class="fas fa-long-arrow-alt-right"></i></a>
                         </div>
                     </div>
-                    <div class="col-lg-8 img-svg">
+                    <div class="col-lg-6 img-svg">
                         <svg id="b2c7d13c-cf19-4853-8e1a-27f628056126" data-name="Layer 1"
                             xmlns="http://www.w3.org/2000/svg" width="841.59024" height="589"
                             viewBox="0 0 841.59024 589">
@@ -205,21 +205,21 @@ Sábado, 5 de Junho de 2021 - Guarulhos, São Paulo
                 <div class="row">
                     <div class="col-md-4">
                         <div class="box-servicos">
-                            <img src="/template/imagens/responsivo.png" alt="Responsivo">
+                            <img src="./template/imagens/responsivo.png" alt="Responsivo">
                             <h3>Responsivo</h3>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi sint harum iste </p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="box-servicos">
-                            <img src="/template/imagens/seguranca.png" alt="Segurança">
+                            <img src="./template/imagens/seguranca.png" alt="Segurança">
                             <h3>Segurança</h3>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi sint harum iste </p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="box-servicos">
-                            <img src="/template/imagens/qualidade.png" alt="Qualidade">
+                            <img src="./template/imagens/qualidade.png" alt="Qualidade">
                             <h3>Qualidade</h3>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi sint harum iste </p>
                         </div>
@@ -234,7 +234,7 @@ Sábado, 5 de Junho de 2021 - Guarulhos, São Paulo
             <div class="row b-line">
                 <div class="col-md-5">
                     <a href="index.html" class="logo">
-                        <img src="/template/imagens/logo.png" alt="Logo da Empresa">
+                        <img src="./template/imagens/logo.png" alt="Logo da Empresa">
                     </a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptates veniam velit quas?
                         Maxime incidunt, cupiditate amet</p>
@@ -288,8 +288,8 @@ Sábado, 5 de Junho de 2021 - Guarulhos, São Paulo
         </div>
     </footer>
     <!-- Scripts -->
-    <script src="/template/javascript/main.js"></script>
-    <script src="/assets/bootstrap/js/bootstrap.bundle.js"></script>
+    <script src="./template/javascript/main.js"></script>
+    <script src="./assets/bootstrap/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
