--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Sábado, 5 de Junho de 2021 - Guarulhos, São Paulo
         <div class="container d-flex justify-content-between align-items-center">
             <!-- Imagem do Topo -->
             <a href="index.html" class="logo me-auto me-lg-0">
-                <img src="/template/imagens/logo.png" alt="Logo da Empresa">
+                <img src="./template/imagens/logo.png" alt="Logo da Empresa">
             </a>
             <!-- Estrura de Menu -->
             <nav id="navbar" class="navbar">
